--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ahmed Abobaker - Full Stack Developer</title>
+    <title>Ahmed Abobaker - Front-End Developer</title>
     <link rel="preload" as="image" href="aesthetic-background-with-gradient-sunset-projector-lamp.jpg" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
@@ -14,7 +14,8 @@
         <nav> 
             <a href="#projects" class="nav-btn">Projects</a>
             <a href="#contact" class="nav-btn">Get in touch</a>
-            <a href="./Ahmed_Abobaker_Front-End%20Developer_resume.pdf" class="nav-btn" target="_blank" rel="noopener noreferrer">Resume</a>
+            <a href="Resume/Ahmed_Abobaker_Front-End Developer_resume (3)-compressed.pdf" class="nav-btn" target="_blank">View CV</a>
+            <a href="Resume/Ahmed_Abobaker_Front-End Developer_resume (3)-compressed.pdf" class="nav-btn" target="_blank" download>Download CV</a>
         </nav>
     </header>
     <!-- line between sections -->
@@ -73,4 +74,18 @@
     </div>
         <script src="script.js"></script>
     </div>
+    
+    <section id="contacts" class="section-5">
+    <h2>Contact Me</h2>
+  <form class="contact-form">
+    <input class="textarea" type="text" placeholder="Name" required>
+    <input class="textarea" type="email" placeholder="Email" required>
+    <textarea  placeholder="Message"></textarea>
+    <button type="submit">Send Message</button>
+  </form>
+</section>
+
+<footer>
+  <p>© 2025 Ahmed | Front-End Developer</p>
+</footer>
 
