--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preload" as="image" href="aesthetic-background-with-gradient-sunset-projector-lamp.jpg" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image"  sizes="32x32" href="img/logo.png">
 </head>
 <body>
 
@@ -69,7 +70,7 @@
         <!-- line between sections -->
         <div class="divider"></div>
     </main>
-    <!-- if ant to add a live background -->
+    <!-- if want to add a video as background -->
     <div class="video-background">
         <video autoplay muted loop playsinline id="myVideo">
             <source src="./" type="video/mp4">
