--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image"  sizes="32x32" href="img/logo.png">
 </head>
-<body>
+<body class="animate-on-load">
 
     <canvas id="particles"></canvas>
     
@@ -52,7 +52,14 @@
             </div>
     </div>
 
-        <p class="bio">Building creative, scalable, and high-performance web and mobile applications. Passionate about modern tech and elegant user experiences.</p>
+
+        <p class="bio">Building creative, scalable, and high-performance web. Passionate about modern tech and elegant user experiences.</p>
+
+        <!-- line between sections -->
+    <div class="divider"></div>
+
+        <!-- Skills and Social Links -->
+          <h2 id="works">Skills</h2>
         <div class="skills-container" id="skills">
             </div>
             <div class="divider"></div>
@@ -63,6 +70,7 @@
     </section>
         <!-- line between sections -->
         <div class="divider"></div>
+
         <!-- Projects -->
         <h2 id="works">Projects</h2>
         <section class="projects-grid" id="projects">
@@ -70,6 +78,7 @@
         <!-- line between sections -->
         <div class="divider"></div>
     </main>
+    
     <!-- if want to add a video as background -->
     <div class="video-background">
         <video autoplay muted loop playsinline id="myVideo">
