--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="icon" type="image"  sizes="32x32" href="img/logo.png">
 </head>
 <body class="animate-on-load">
-<canvas id="particles"></canvas>
-    
+
+    <canvas id="particles"></canvas>
     
     <!-- Header -->
     <header>
@@ -134,11 +134,11 @@
     <div class="divider"></div>
 
         <!-- Skills and Social Links -->
-        <h2 id="works">Front-End Skills</h2>
+        <h2 id="skills-title">Front-End Skills</h2>
         <div class="skills-container" id="skills">
             </div>
             <div class="divider"></div>
-            <h2 id="works">Social and contact</h2>
+            <h2 id="social-title">Social and contact</h2>
             <div class="social-links" id="contact">
         </div>
 
@@ -147,7 +147,7 @@
         <div class="divider"></div>
 
         <!-- Projects -->
-        <h2 id="works">Projects</h2>
+        <h2 id="projects-title">Projects</h2>
         <section class="projects-grid" id="projects">
     </section>
 
