--- a/index.html
+++ b/index.html
@@ -11,6 +11,26 @@
 </head>
 <body class="animate-on-load">
 
+
+
+<div id="intro-overlay">
+  <div class="intro-content">
+    <h1>
+      Hi, I'm<br>
+      <span class="intro-name">Ahmed Abobaker</span>
+    </h1>
+    <p class="intro-role">Frontend Developer & UI/UX Enthusiast</p>
+    <p class="intro-description">
+      Crafting beautiful, responsive, and user-friendly web experiences<br>
+      with modern technologies and creative design patterns.
+    </p>
+  </div>
+</div>
+
+
+<div id="main-content">
+
+</div>
     <canvas id="particles"></canvas>
     
     <!-- Header -->
